--- a/08Intents/app/src/main/AndroidManifest.xml
+++ b/08Intents/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
                     android:scheme="sum" />
             </intent-filter>
         </activity>
+        <activity android:name=".ThirdActivity" />
     </application>
 
 </manifest>
